--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       </div>
     </div>
     <!-- Countdown section end -->
-
+      <a href="blog2/blog2.html">blog</a>
     <!-- Footer section start -->
     <footer class="py-10 text-center text-sm">
       Copyright © 2023 Quiz Hero All Rights Reserved.
